text alignment fix

--- a/styles/styles.sass
+++ b/styles/styles.sass
@@ -578,6 +578,8 @@ nav
 		.androids
 			opacity: 0.5
 		.social-media
+			h1
+				text-align: center
 			.icons
 				flex-direction: column
 				align-items: center
